Lots of changes

--- a/index.html
+++ b/index.html
@@ -4,17 +4,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <title></title>
-  
-  
+
+
 </head>
 
 <body>
+  <h2>🇺🇸 USA Address Generator</h2>
+  <div id="box">
+
+    <div class="sec">
+      <h3>Name: </h3>
+      <h3 id="name" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>Address 1: </h3>
+
+      <h3 id="ad1" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>Address 2: </h3>
+      <h3 id="ad2" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>City: </h3>
+      <h3 id="city" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>Phone: </h3>
+      <h3 id="phone" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>State: </h3>
+      <h3 id="state" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
+
+    <div class="sec">
+      <h3>Zip Code: </h3>
+      <h3 id="zip" class="data"></h3>
+      <a href="#" class="copy"><i class="fa-solid fa-circle-check"></i></a>
+    </div>
 
 
 
 
-<script src="USA.js"></script>
+
+
+
+  </div>
+  <a href="#" class="copy1"><i class="fa-solid fa-circle-check"></i> Text Copied Successfully</a>
+  <button id="btn">Generate</button>
+  <script src="USA.js"></script>
 </body>
 
 </html>
